--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -63,11 +63,11 @@
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_23.ipynb">23</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_24.ipynb">24</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_25.ipynb">25</a>
-		<a class= "autre" >26</a>
-		<a class= "autre" >27</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_26.ipynb" >26</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_25.ipynb" >27</a>
 		<a class= "autre" >28</a>
-		<a class= "autre" >29</a>
-		<a class= "autre" >30</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_29.ipynb" >29</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_30.ipynb" >30</a>
 		</p>
 	
 	
