--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -114,7 +114,17 @@
 		<p> <a href="nsi_t_sl_3.pdf">Implémentation des listes chaînées</a> </p>
 		<p> <a href="nsi_t_sl_4.pdf">Implémenter une pile</a> </p>
 		<p> <a href="nsi_t_sl_5.pdf">Implémentation une file</a> </p>
-		p> <a class = "td" href="nsi_t_sl_td.pdf">Les labyrinthes</a> </p>
+		<p> <a class = "td" href="nsi_t_sl_td.pdf">Les labyrinthes</a> </p>
+		
+		<h2>Diviser pour régner</h2>
+			
+		<p> <a href="nsi_t_dpr_1.pdf">Intro</a> </p>
+		<p> <a href="nsi_t_dpr_2.pdf">Le tri fusion ?</a> </p>
+	
+		
+		
+		
+		
     </div>
     <p id="footer">jb duthoit</p>
   
