--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -72,6 +72,7 @@
 		
 		<p> <a href="nsi_1_algo_1.pdf", target="_blank">  Intro sur les algorithmes</a> </p>
 		<p> <a href="nsi_1_algo_2.pdf", target="_blank">  Recherches de valeurs dans un tableau</a> </p>
+		<p> <a href="nsi_1_algo_3.pdf", target="_blank">  Tri selection</a> </p>
 			
 			
 		<h2>Liste par compréhension</h2>		
