--- a/m/2/index.html
+++ b/m/2/index.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html">
 <html lang="fr">
   <head>
@@ -41,6 +41,7 @@
 		<p> <a href="m_2_generalites_fonctions_3.pdf">  Fonction paire, fonction impaire </a> </p>
 		<p> <a href="m_2_generalites_fonctions_4.pdf">  Variations de fonction </a> </p>
 		<p> <a href="m_2_generalites_fonctions_5.pdf">  Extrema de fonctions</a> </p>
+		<p> <a class = "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMXIzbVZBWGxyYVg4Qjh0Mm5TM01lRFFIVHBTNVBTRUEwUkY5eVppUUljRTAiLCJ1c2VycyI6IkFub255bWUifQ=="> Un petit QCM d'auto-évaluation !! </a> </p>
 		
 		<!-- <h2>Les vecteurs du plan</h2> -->
 		
