--- a/m/1/index.html
+++ b/m/1/index.html
@@ -17,7 +17,7 @@
 		<li><a href="accueil.html">  Accueil  </a></li>
         <li><a href="index.html">  Les cours et savoir-faire  </a></li>
         <li><a href="python.html">  Python  </a></li>
-        <li><a href="../rien.pdf">  Les maths ça sert à rien </a></li>
+        <li><a href="../rien.pdf">  Les maths, ça ne sert à rien ! </a></li>
         
       </ul>
     </nav>
