--- a/m/2/index.html
+++ b/m/2/index.html
@@ -18,7 +18,7 @@
 		<li><a href="accueil.html">  Accueil  </a></li>
         <li><a href="index.html">  Les cours et savoir-faire  </a></li>
         <li><a href="python.html">  Python  </a></li>
-        <li><a href="logiciel.html">  Logiciels  </a></li>
+        <li><a href="../rien.pdf">  Les maths, ça ne sert à rien !</a></li>
         
       </ul>
     </nav>
