--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -39,15 +39,15 @@
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_3.ipynb">03</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_4.ipynb">04</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_5.ipynb">05</a>
-		<a class= "autre" >06</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_6.ipynb">06</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_7.ipynb">07</a>
-		<a class= "autre" >08</a>
-		<a class= "autre" >09</a>
-		<a class= "autre" >10</a>
+		<a class= "autre"style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_8.ipynb">08</a>
+		<a class= "autre"style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_9.ipynb">09</a>
+		<a class= "autre"style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_10.ipynb" >10</a>
 		</p>
 		<p>
-		<a class= "autre" >11</a>
-		<a class= "autre" >12</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_11.ipynb">11</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_12.ipynb">12</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_13.ipynb">13</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_14.ipynb">14</a>
 		<a class= "autre" style="color: #8ebf42"  href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_15.ipynb">15</a>
@@ -59,7 +59,7 @@
 		</p>
 		<p>
 		<a class= "autre" >21</a>
-		<a class= "autre" >22</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_22.ipynb">22</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_23.ipynb">23</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_24.ipynb">24</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_25.ipynb">25</a>
