--- a/m/2/index.html
+++ b/m/2/index.html
@@ -43,9 +43,13 @@
 		<p> <a href="m_2_generalites_fonctions_5.pdf">  Extrema de fonctions</a> </p>
 		<p> <a class = "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMXIzbVZBWGxyYVg4Qjh0Mm5TM01lRFFIVHBTNVBTRUEwUkY5eVppUUljRTAiLCJ1c2VycyI6IkFub255bWUifQ=="> Un petit QCM d'auto-évaluation !! </a> </p>
 		
-		<!-- <h2>Les vecteurs du plan</h2> -->
+		<h2>Les vecteurs du plan</h2>
 		
-		<!-- <p> <a href="m_2_ch3.pdf">  Le cours  </a> </p> -->
+		<p> <a href="vecteurs_1.pdf">  Qu'est ce qu'un vecteur ?</a> </p>
+		<p> <a href="vecteurs_2.pdf">  Opérations sur les vecteurs ?</a> </p>
+		<p> <a href="vecteurs_3.pdf">  Vecteurs colinéaires $</a> </p>
+		
+		
 		
 		<!-- <p> <a class= "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMUhYQzk0MlJtb0FqdEgxR3hQaWlndldJb1VnU3Bzc1dGVHNiU2hWVjhKQ2MiLCJ1c2VycyI6IkFub255bWUifQ==",target="_blank">  Se tester avec un QCM  </a> </p> -->
 		
