--- a/m/2/index.html
+++ b/m/2/index.html
@@ -47,7 +47,7 @@
 		
 		<p> <a href="vecteurs_1.pdf">  Qu'est ce qu'un vecteur ?</a> </p>
 		<p> <a href="vecteurs_2.pdf">  Opérations sur les vecteurs ?</a> </p>
-		<p> <a href="vecteurs_3.pdf">  Vecteurs colinéaires $</a> </p>
+		<p> <a href="vecteurs_3.pdf">  Vecteurs colinéaires</a> </p>
 		
 		
 		
