--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -122,8 +122,18 @@
 		<p> <a href="nsi_t_dpr_2.pdf">Le tri fusion ?</a> </p>
 	
 		
+		<h2>Les arbres</h2>
+			
+		<p> <a href="nsi_t_arbres_1.pdf">Les arbres</a> </p>
+		<p> <a href="nsi_t_arbres_2.pdf">Les arbres binaires</a> </p>
+		<p> <a href="nsi_t_arbres_3.pdf">Les arbres binaires de recherche</a> </p>
 		
 		
+		
+		<h2>Algorithmes sur les arbres</h2>
+			
+		<p> <a href="nsi_t_algo_arbres_1.pdf">Algorithme sur les arbres binaire</a> </p>
+		<p> <a href="nsi_t_algo_arbres_2.pdf">Algorithmes sur les arbres binaires de recherche</a> </p>
 		
     </div>
     <p id="footer">jb duthoit</p>
