--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -135,6 +135,17 @@
 		<p> <a href="nsi_t_algo_arbres_1.pdf">Algorithme sur les arbres binaire</a> </p>
 		<p> <a href="nsi_t_algo_arbres_2.pdf">Algorithmes sur les arbres binaires de recherche</a> </p>
 		
+		
+		<h2>Les réseaux</h2>
+			
+		<p> Rappels de première (indispensable) <a href="nsi_1_resau_1.pdf"> Intro </a>
+												<a href="nsi_1_resau_2.pdf"> OSI </a>
+												<a href="nsi_1_resau_3.pdf"> Add IP </a>
+												<a href="nsi_1_resau_4.pdf"> TCP/IP </a>
+												<a href="nsi_1_resau_5.pdf"> Simulateur </a>
+												<a href="nsi_1_resau_6.pdf"> Annexes </a>												</p>
+		<p> <a href="">Cours Tle</a> </p>
+		
     </div>
     <p id="footer">jb duthoit</p>
   
