--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -136,15 +136,14 @@
 		<p> <a href="nsi_t_algo_arbres_2.pdf">Algorithmes sur les arbres binaires de recherche</a> </p>
 		
 		
-		<h2>Les réseaux</h2>
+		<h2>Les réseaux : Rappels de première (indispensable)</h2>
 			
-		<p> Rappels de première (indispensable) <a href="nsi_1_resau_1.pdf"> Intro </a>
-												<a href="nsi_1_resau_2.pdf"> OSI </a>
-												<a href="nsi_1_resau_3.pdf"> Add IP </a>
-												<a href="nsi_1_resau_4.pdf"> TCP/IP </a>
-												<a href="nsi_1_resau_5.pdf"> Simulateur </a>
-												<a href="nsi_1_resau_6.pdf"> Annexes </a>												</p>
-		<p> <a href="">Cours Tle</a> </p>
+		<p>  									<a class = "autre" href="../1/nsi_1_resau_1.pdf"> Intro </a>
+												<a class = "autre"  href="../1/nsi_1_resau_2.pdf"> OSI </a>
+												<a class = "autre"  href="../1/nsi_1_resau_3.pdf"> Add IP </a>
+												<a class = "autre"  href="../1/nsi_1_resau_4.pdf"> TCP/IP </a>
+												<a  class = "autre" href="../1/nsi_1_resau_5.pdf"> Simulateur </a>
+												<a  class = "autre" href="../1/nsi_1_resau_6.pdf"> Annexes </a></p>
 		
     </div>
     <p id="footer">jb duthoit</p>
