--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -138,12 +138,12 @@
 		
 		<h2>Les réseaux : Rappels de première (indispensable)</h2>
 			
-		<p>  									<a class = "autre" href="../1/nsi_1_resau_1.pdf"> Intro </a>
-												<a class = "autre"  href="../1/nsi_1_resau_2.pdf"> OSI </a>
-												<a class = "autre"  href="../1/nsi_1_resau_3.pdf"> Add IP </a>
-												<a class = "autre"  href="../1/nsi_1_resau_4.pdf"> TCP/IP </a>
-												<a  class = "autre" href="../1/nsi_1_resau_5.pdf"> Simulateur </a>
-												<a  class = "autre" href="../1/nsi_1_resau_6.pdf"> Annexes </a></p>
+		<p>  									<a class = "autre" href="../1/nsi_1_reseau_1.pdf"> Intro </a>
+												<a class = "autre"  href="../1/nsi_1_reseau_2.pdf"> OSI </a>
+												<a class = "autre"  href="../1/nsi_1_reseau_3.pdf"> Add IP </a>
+												<a class = "autre"  href="../1/nsi_1_reseau_4.pdf"> TCP/IP </a>
+												<a  class = "autre" href="../1/nsi_1_reseau_5.pdf"> Simulateur </a>
+												<a  class = "autre" href="../1/nsi_1_reseau_6.pdf"> Annexes </a></p>
 		
     </div>
     <p id="footer">jb duthoit</p>
