--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -79,7 +79,9 @@
 		<p> <a href="nsi_1_comprehension.pdf", target="_blank">  Le cours  </a> </p>
 		
 		
-		<!-- <h2>HTML et CSS</h2> -->
+		<h2>Interaction sur le Web</h2>
+		<p> <a href="nsi_1_web_1.pdf", target="_blank">  Introduction </a> </p>
+		<p> <a href="nsi_1_web_2.pdf", target="_blank">  HTML et CSS </a> </p>
 		
 		
 		
