--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -83,7 +83,7 @@
 		<p> <a href="nsi_1_web_1.pdf", target="_blank">  Introduction </a> </p>
 		<p> <a href="nsi_1_web_2.pdf", target="_blank">  HTML et CSS </a> </p>
 		<p> <a class="td" href="projet_html/nsi_1_projet_html_css.html" target="blank"> Projet HTML/CSS</a></p>
-		
+		<p> <a href="nsi_1_web_3.pdf", target="_blank">  Le JavaScript </a> </p>
 		
 		<!-- <p> <a href="nsi_1_ch7.pdf", target="_blank">  Le cours  </a> </p> -->
 		<!-- <p> <a class="td" href="projets/index.html", target="_blank">  Les projets  </a> </p> -->
