--- a/nsi/1/projet_html/nsi_1_projet_html_css.html
+++ b/nsi/1/projet_html/nsi_1_projet_html_css.html
@@ -43,7 +43,7 @@
 		Ce dossier  compressé au format .zip sera nommé <code> nom_prenom_projet1</code>.</p>
         <p>Il s'agit d'un travail personnel !</p>
         
-		<p>Votre dossier doit avoir la structure suivante :<p>
+		<p>Votre dossier doit avoir la structure suivante :</p>
 		<p>	/nom_prenom_projet1</p>
 		<p>	--- /images</p>
 		<p>	--- --- # toutes les images sont dans le dossier "images"</p>
