--- a/nsi/1/projet_html/nsi_1_projet_html_css.html
+++ b/nsi/1/projet_html/nsi_1_projet_html_css.html
@@ -43,8 +43,8 @@
 		Ce dossier  compressé au format .zip sera nommé <code> nom_prenom_projet1</code>.</p>
         <p>Il s'agit d'un travail personnel !</p>
         
-		<p>Votre dossier doit avoir la structure suivante :</br>
-		<code>	/nom_prenom_projet1</code></br>
+		<p>Votre dossier doit avoir la structure suivante :</p>
+		<p><code>	/nom_prenom_projet1</code></br>
 		<code>	--- /images</code> (toutes les images sont dans le dossier "images" )</br>
 		<code>  --- index.html</code></br>
 		<code>	--- passion.html</code></br>
