--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -82,7 +82,7 @@
 		<h2>Interaction sur le Web</h2>
 		<p> <a href="nsi_1_web_1.pdf", target="_blank">  Introduction </a> </p>
 		<p> <a href="nsi_1_web_2.pdf", target="_blank">  HTML et CSS </a> </p>
-		<p> <a class="td" href="projet_html/nsi_1_projet_html_css.html" target="blank"> Projet HTML/CSS</a></p>
+		<p> <a class="td" href="projet_html/nsi_1_projet_html_css.html" target="blank"> Projet HTML/CSS</a> <a href="projet.zip">Télécharger le modèle</a></p>
 		<p> <a href="nsi_1_web_3.pdf", target="_blank">  Le JavaScript </a> </p>
 		
 		<!-- <p> <a href="nsi_1_ch7.pdf", target="_blank">  Le cours  </a> </p> -->
