--- a/m/1/index.html
+++ b/m/1/index.html
@@ -88,15 +88,17 @@
 		<!-- <p> <a class="autre" href="maths_1_cm_fonctions_derivees", target="_blank">  Carte mentale  </a> </p> -->
 		
 		
-		<!-- <h2>Les suites numériques</h2> -->
+		<h2>Les suites numériques</h2>
+		
+			
+		<p> <a href="m_1_suites_1.pdf", target="_blank">  Définitions et mode de génération  </a> </p>
+		<p> <a href="m_1_suites_2.pdf", target="_blank">  Variations de suites  </a> </p>
+		<p> <a href="m_1_suites_3.pdf", target="_blank">  Limites de suite </a> </p>
 		
 		
-		
-		<!-- <p> <a href="m_1_suites_1.pdf", target="_blank">  Définitions et mode de génération  </a> </p> -->
-		<!-- <p> <a href="m_1_suites_2.pdf", target="_blank">  Les suites arithmétiques  </a> </p> -->
-		<!-- <p> <a href="m_1_suites_3.pdf", target="_blank">  Les suites géométriques  </a> </p> -->
-		<!-- <p> <a href="m_1_suites_4.pdf", target="_blank">  Variations de suites  </a> </p> -->
-		<!-- <p> <a href="m_1_suites_5.pdf", target="_blank">  Limites de suite </a> </p> -->
+		<h2>Les suites arithmétiques et les suites géométriques</h2>
+		<p> <a href="m_1_suites_sa.pdf", target="_blank">  Les suites arithmétiques  </a> </p>
+		<p> <a href="m_1_suites_sg.pdf", target="_blank">  Les suites géométriques  </a> </p>
 		
 		
 		<!-- <h2>Trigonométrie</h2> -->
