--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -144,6 +144,13 @@
 												<a class = "autre"  href="../1/nsi_1_reseau_4.pdf"> TCP/IP </a>
 												<a  class = "autre" href="../1/nsi_1_reseau_5.pdf"> Simulateur </a>
 												<a  class = "autre" href="../1/nsi_1_reseau_6.pdf"> Annexes </a></p>
+												
+		<h2>Le routage</h2>
+			
+		<p> <a href="nsi_t_routage_1.pdf">Introduction historique</a> </p>
+		<p> <a href="nsi_t_routage_2.pdf">Rappels de première</a> </p>
+		<p> <a href="nsi_t_routage_3.pdf">Le routage</a> </p>
+		<p> <a href="nsi_t_routage_4.pdf">Protocole de routage</a> </p>
 		
     </div>
     <p id="footer">jb duthoit</p>
