--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -150,7 +150,8 @@
 		<p> <a href="nsi_t_routage_1.pdf">Introduction historique</a> </p>
 		<p> <a href="nsi_t_routage_2.pdf">Rappels de première</a> </p>
 		<p> <a href="nsi_t_routage_3.pdf">Le routage</a> </p>
-		<p> <a href="nsi_t_routage_4.pdf">Protocole de routage</a> </p>
+		<p> <a href="nsi_t_routage_4.pdf">Protocole RIP</a> </p>
+		<p> <a href="nsi_t_routage_5.pdf">Protocole OSPF</a> </p>
 		
     </div>
     <p id="footer">jb duthoit</p>
