--- a/m/2/index.html
+++ b/m/2/index.html
@@ -49,7 +49,11 @@
 		<p> <a href="vecteurs_2.pdf">Opérations sur les vecteurs ?</a> </p>
 		<p> <a href="vecteurs_3.pdf">Vecteurs colinéaires</a> </p>
 		
+		<h2>Arithmétique</h2>
 		
+		<p> <a href="arithmetique_1.pdf"> Divisibilité </a> </p>
+		<p> <a href="arithmetique_2.pdf"> Les nombres premiers </a> </p>
+	
 		
 		<!-- <p> <a class= "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMUhYQzk0MlJtb0FqdEgxR3hQaWlndldJb1VnU3Bzc1dGVHNiU2hWVjhKQ2MiLCJ1c2VycyI6IkFub255bWUifQ==",target="_blank">  Se tester avec un QCM  </a> </p> -->
 		
