--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -153,6 +153,12 @@
 		<p> <a href="nsi_t_routage_4.pdf">Protocole RIP</a> </p>
 		<p> <a href="nsi_t_routage_5.pdf">Protocole OSPF</a> </p>
 		
+		
+		<h2>Paradigmes de programmaion</h2>
+			
+		<p> <a href="nsi_t_paradigme_1.pdf">Paradigmes de programmation</a> </p>
+		
+		
     </div>
     <p id="footer">jb duthoit</p>
   
