--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -30,9 +30,16 @@
 	<div id="contenu_cours">
 		<h2>Réussir le grand oral</h2>
 		<p> <a class= "autre" href="grand_oral.pdf"> Granto </a> </p>
+	</div>
 	
 	<div id="contenu_cours">
 		<h2>S'entraîner à l'épreuve pratique</h2>
+		<a class= "autre" style="color: #8ebf42" href="epp/2022/index_epp.html">Les sujets !</a>
+	</div>	
+		
+		
+		
+		
 		<p> <a href="liste_2021.pdf"> Liste des sujets 2021 par thème</a> </p>
 		<p> <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_1.ipynb">01</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_2.ipynb">02</a>
