--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -34,49 +34,49 @@
 	
 	<div id="contenu_cours">
 		<h2>S'entraîner à l'épreuve pratique</h2>
-		<a class= "autre" style="color: #8ebf42" href="epp/2022/index_epp.html">Les sujets !</a>
+		<a class= "autre" style="color: #8ebf42" href="epp/index_epp.html">Les sujets !</a>
 	</div>	
 		
 		
 		
 		
-		<p> <a href="liste_2021.pdf"> Liste des sujets 2021 par thème</a> </p>
-		<p> <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_1.ipynb">01</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_2.ipynb">02</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_3.ipynb">03</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_4.ipynb">04</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_5.ipynb">05</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_6.ipynb">06</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_7.ipynb">07</a>
-		<a class= "autre"style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_8.ipynb">08</a>
-		<a class= "autre"style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_9.ipynb">09</a>
-		<a class= "autre"style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_10.ipynb" >10</a>
-		</p>
-		<p>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_11.ipynb">11</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_12.ipynb">12</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_13.ipynb">13</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_14.ipynb">14</a>
-		<a class= "autre" style="color: #8ebf42"  href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_15.ipynb">15</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_16.ipynb">16</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_17.ipynb">17</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_18.ipynb">18</a>
-		<a class= "autre" >19</a>
-		<a class= "autre" >20</a>
-		</p>
-		<p>
-		<a class= "autre" >21</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_22.ipynb">22</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_23.ipynb">23</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_24.ipynb">24</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_25.ipynb">25</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_26.ipynb" >26</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_27.ipynb" >27</a>
-		<a class= "autre" >28</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_29.ipynb" >29</a>
-		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_30.ipynb" >30</a>
-		</p>
+		<!-- <p> <a href="liste_2021.pdf"> Liste des sujets 2021 par thème</a> </p> -->
+		<!-- <p> <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_1.ipynb">01</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_2.ipynb">02</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_3.ipynb">03</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_4.ipynb">04</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_5.ipynb">05</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_6.ipynb">06</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_7.ipynb">07</a> -->
+		<!-- <a class= "autre"style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_8.ipynb">08</a> -->
+		<!-- <a class= "autre"style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_9.ipynb">09</a> -->
+		<!-- <a class= "autre"style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_10.ipynb" >10</a> -->
+		<!-- </p> -->
+		<!-- <p> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_11.ipynb">11</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_12.ipynb">12</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_13.ipynb">13</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_14.ipynb">14</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42"  href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_15.ipynb">15</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_16.ipynb">16</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_17.ipynb">17</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_18.ipynb">18</a> -->
+		<!-- <a class= "autre" >19</a> -->
+		<!-- <a class= "autre" >20</a> -->
+		<!-- </p> -->
+		<!-- <p> -->
+		<!-- <a class= "autre" >21</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_22.ipynb">22</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_23.ipynb">23</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_24.ipynb">24</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_25.ipynb">25</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_26.ipynb" >26</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_27.ipynb" >27</a> -->
+		<!-- <a class= "autre" >28</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_29.ipynb" >29</a> -->
+		<!-- <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_30.ipynb" >30</a> -->
 	
+		<!-- </p> -->
 	
 	
     <div id="contenu_cours">
