--- a/nsi/t/epp/index_epp.html
+++ b/nsi/t/epp/index_epp.html
@@ -109,3 +109,8 @@
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_30.ipynb" >30</a>
 		</p>
 	
+	</div>
+    <p id="footer">jb duthoit</p>
+  
+  </body>
+</html>
