--- a/nsi/t/epp/index_epp.html
+++ b/nsi/t/epp/index_epp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 
-	<link href="style.css" rel="stylesheet">
+	<link href="../style.css" rel="stylesheet">
 
     <title>Maths et NSI</title>
   </head>
@@ -72,8 +72,8 @@
 	
 	
 	
-		<p> <a href="liste_2021.pdf"> Liste des sujets 2022 par thème</a> </p>
-		<p> <a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet1-2022.ipynb">01</a>
+		
+		<p> <a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet1-2022.ipynb">01</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_2.ipynb">02</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_3.ipynb">03</a>
 		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_4.ipynb">04</a>
