--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -34,7 +34,7 @@
 	
 	
 		<h2>S'entraîner à l'épreuve pratique</h2>
-		<a class= "autre"  href="epp/index_epp.html">Les sujets !</a>
+		<p> <a class= "autre"  href="epp/index_epp.html">Les sujets de 2021 et 2022 en notebook !</a></p>
 		
 		
 		
