--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -29,7 +29,9 @@
 	<!-- # </div> -->
 	<div id="contenu_cours">
 		<h2>Réussir le grand oral</h2>
-		<p> <a class= "autre" href="grand_oral.pdf"> Granto </a> </p>
+		<p> <a class= "autre" href="grand_oral_1.pdf"> Qu'est ce que le grand oral ? </a> </p>
+		<p> <a class= "autre" href="grand_oral_2.pdf"> Quelques thématiques ? </a> </p>
+		<p> <a class= "autre" href="grand_oral_3.pdf"> Ma question est-elle bien formulée ? </a> </p>
 	
 	
 	
