--- a/m/1/index.html
+++ b/m/1/index.html
@@ -92,7 +92,7 @@
 		
 			
 		<p> <a href="m_1_suites_1.pdf", target="_blank">  Définitions et mode de génération  </a> </p>
-		<p><a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/m/1/notebook/m_1_suites_1.ipynb">Python et les suites...</a></p>
+		<p><a class= "td" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/m/1/notebook/m_1_suites_1.ipynb">Python et les suites...</a></p>
 		<p> <a href="m_1_suites_2.pdf", target="_blank">  Variations de suites  </a> </p>
 		<p> <a href="m_1_suites_3.pdf", target="_blank">  Limites de suite </a> </p>
 		
