--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -163,9 +163,19 @@
 		<p> <a href="nsi_t_routage_5.pdf">Protocole OSPF</a> </p>
 		
 		
-		<h2>Paradigmes de programmaion</h2>
+		<h2>Paradigmes de programmation</h2>
 			
 		<p> <a href="nsi_t_paradigme_1.pdf">Paradigmes de programmation</a> </p>
+		
+		
+		
+		<h2>Sécurisation</h2>
+			
+		<p> <a href="nsi_t_securisation_1.pdf">Intro</a> </p>
+		<p> <a href="nsi_t_securisation_2.pdf">Le chiffrement symétrique</a> </p>
+		<p> <a href="nsi_t_securisation_3.pdf">Le chiffrement asymétrique</a> </p>
+		<p> <a href="nsi_t_securisation_4.pdf">Authentification</a> </p>
+		<p> <a href="nsi_t_securisation_5.pdf">Le protocole https</a> </p>
 		
 		
     </div>
