--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -168,6 +168,22 @@
 		<p> <a href="nsi_t_paradigme_1.pdf">Paradigmes de programmation</a> </p>
 		
 		
+		<h2>Les SOCs</h2>
+			
+		<p> <a href="nsi_t_socs_1.pdf">De l'ENIAC au téléphone portable</a> </p>
+		<p> <a href="nsi_t_socs_2.pdf">Rappels de premières</a> </p>
+		<p> <a href="nsi_t_socs_3.pdf">Les micro-contrôleurs</a> </p>
+		<p> <a href="nsi_t_socs_4.pdf">Les systèmes sur puces</a> </p>
+		
+		
+		
+		<h2>Les processus</h2>
+			
+		<p> <a href="nsi_t_processus_1.pdf">les processus</a> </p>
+		<p> <a href="nsi_t_processus_2.pdf">Ordonnancement</a> </p>
+		<p> <a href="nsi_t_processus_3.pdf">Interbloquages</a> </p>
+		
+		
 		
 		<h2>Sécurisation</h2>
 			
