--- a/m/1/index.html
+++ b/m/1/index.html
@@ -97,6 +97,13 @@
 		<p> <a href="m_1_suites_3.pdf", target="_blank">  Limites de suite </a> </p>
 		
 		
+		<h2>Les variables aléatoires</h2>
+		
+			
+		<p> <a href="m_1_va_1.pdf", target="_blank">  Définition  </a> </p>
+		<p> <a href="m_1_va_2.pdf", target="_blank">  Espérance, variance et écart-type</a> </p>
+		
+		
 		<h2>Les suites arithmétiques et les suites géométriques</h2>
 		<p> <a href="m_1_suites_sa.pdf", target="_blank">  Les suites arithmétiques  </a> </p>
 		<p> <a href="m_1_suites_sg.pdf", target="_blank">  Les suites géométriques  </a> </p>
