--- a/m/2/index.html
+++ b/m/2/index.html
@@ -57,10 +57,10 @@
 	
 		<h2>Fonctions de réference</h2>
 		
-		<p> <a href="m_2_fonxtions_reference_1.pdf"> La fonction carré </a> </p>
-		<p> <a href="m_2_fonxtions_reference_2.pdf"> La fonction inverse </a> </p>
-		<p> <a href="m_2_fonxtions_reference_3.pdf"> La fonction cube</a> </p>
-		<p> <a href="m_2_fonxtions_reference_4.pdf"> La fonction racine carré </a> </p>
+		<p> <a href="m_2_fonctions_reference_1.pdf"> La fonction carré </a> </p>
+		<p> <a href="m_2_fonctions_reference_2.pdf"> La fonction inverse </a> </p>
+		<p> <a href="m_2_fonctions_reference_3.pdf"> La fonction cube</a> </p>
+		<p> <a href="m_2_fonctions_reference_4.pdf"> La fonction racine carrée </a> </p>
 		
 		<!-- <p> <a class= "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMUhYQzk0MlJtb0FqdEgxR3hQaWlndldJb1VnU3Bzc1dGVHNiU2hWVjhKQ2MiLCJ1c2VycyI6IkFub255bWUifQ==",target="_blank">  Se tester avec un QCM  </a> </p> -->
 		
