--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -189,7 +189,7 @@
 			
 		<p> <a href="nsi_t_securisation_1.pdf">Intro</a> </p>
 		<p> <a href="nsi_t_securisation_2.pdf">Le chiffrement symétrique</a> </p>
-		<p> <a class="autre" href="secret.txt"> Le code secret à déchiffere </a> </p>
+		<p> <a class="autre" href="secret.txt"> Le code secret à déchiffrer</a> </p>
 		<p> <a href="nsi_t_securisation_3.pdf">Le chiffrement asymétrique</a> </p>
 		<p> <a href="nsi_t_securisation_4.pdf">Authentification</a> </p>
 		<p> <a href="nsi_t_securisation_5.pdf">Le protocole https</a> </p>
